Add route to get all recipes with ingredients
